--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
-}
+/* AnnouncementBanner CSS */
+.custom-carousel {
+  /* Hide the next and previous controls */
+  .carousel-control-next,
+  .carousel-control-prev {
+    display: none;
+  }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  /* Hide the indicators */
+  .carousel-indicators {
+    display: none;
   }
 }
+/* END AnnouncementBanner CSS */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* MainNav CSS */
+  nav .btn-primary {
+    background-color: #329BD1;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* END MainNav CSS */
