--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,10 @@
 .homepage-video-banner-bag-textbox h3 {
   color: white;
 }
+
+.unleash-style {
+  color: #329BD1;
+}
 /* END HomepageBannerBag CSS */
 
 
@@ -51,6 +55,69 @@
 }
 /* END ShopByBrands CSS */
 
+
+/* Elevate Fashion Image Banner CSS */
+.elevate-fashion-image-banner img {
+  max-width: 100%;
+}
+
+.elevate-fashion-image-banner-container {
+  position: relative;
+}
+
+.elevate-fashion-text-overlay-box {
+  position: absolute;
+  top: 35%;
+  left: 3%;
+}
+
+.elevate-fashion {
+  color: #329BD1;
+}
+/* END Elevate Fashion Image Banner CSS */
+
+
+/* Womens Bags Jewelry Image Banner CSS */
+.womens-bags-jewellery-img-text-overlay img {
+  max-width: 100%;
+}
+
+div.womens-bags-text-overlay {
+  position: relative;
+  display: inline-block;
+}
+
+div.womens-bags-text-overlay h2 {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(50, 155, 209, 0.7);
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+div.womens-jewellery-text-overlay {
+  position: relative;
+  display: inline-block;
+}
+
+div.womens-jewellery-text-overlay h2 {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(50, 155, 209, 0.7);
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.women-bags-jewellery-img-text-overlay-wrapper a {
+  text-decoration: none;
+}
+/* END - Womens Bags Jewelry Image Banner CSS */
 
 
 /* ---------------------------------------- MOBILE RESPONSIVENESS --------------------------------- */
