--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   color: #fff;
   padding: 10px;
   text-align: center;
-  z-index: 1;
+  z-index: 9999;
 }
 
 .cookie-consent button {
@@ -89,6 +89,17 @@
 }
 
 /* END HomepageBannerBag VIDEO CSS */
+
+
+/* Featured Products Carousel CSS */
+.featured-products-carousel .carousel-control-next,
+.featured-products-carousel .carousel-control-prev {
+  display: flex !important;
+  color: black !important;
+  font-size: 3rem;
+  background: rgba(255, 255, 255, 0.5);
+  width: 5%;
+}
 
 
 /* ShopByBrands CSS */
