--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* global button */
+.btn-primary {
+  background-color: #329BD1;
+}
+
+.btn-primary:hover {
+  background-color: #329BD1;
+}
