--- a/src/App.css
+++ b/src/App.css
@@ -217,3 +217,35 @@ div.womens-jewellery-text-overlay h2 {
 }
 
 /* END - Homepage Video Banner Shoes CSS */
+
+/* Jewelry Video Banner Homepage CSS */
+.jewelry-video-banner-homepage .container-liquid {
+  position: relative;
+}
+
+.jewelry-video-banner-homepage-textbox {
+  position: absolute;
+  top: 50%;
+  left: 3%;
+}
+
+.jewelry-video-banner-homepage-textbox span.unveil-radiance {
+  color: #329BD1;
+}
+
+.jewelry-video-banner-homepage-textbox span.jewelry-obsession {
+  color: white;
+}
+
+.jewelry-video-banner-homepage-textbox h3 {
+  font-size: 4rem;
+}
+
+@media screen and (max-width: 430px) {
+  .jewelry-video-banner-homepage-textbox h3 {
+    font-size: 1.5rem;
+  }
+
+}
+
+/* END - Jewelry Video Banner Homepage CSS */
