--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  color: #333;
+}
+
 /* global button */
 .btn-primary {
   background-color: #329BD1 !important;
@@ -34,4 +42,15 @@ code {
   color: #329BD1;
   font-weight: 700;
   font-size: 1.5rem;
+}
+
+/* global section */
+section {
+  margin: 5rem 0;
+}
+
+@media screen and (max-width: 430px) {
+  section {
+    margin: 3rem 0;
+  }
 }
