--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,3 @@
-/* CookieConsent CSS */
-.cookie-consent {
-  position: fixed;
-  bottom: 1rem;
-  left: 1rem;
-  width: 30%;
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-  z-index: 9999;
-}
-
-.cookie-consent-text {
-  color: #fff !important;
-}
-
-.cookie-consent button {
-  margin: 0 5px;
-}
-
-@media screen and (max-width: 430px) {
-  .cookie-consent {
-    width: 100%;
-    left: 0;
-  }
-}
-
-/* END CookieConsent CSS */
-
-
 /* AnnouncementBanner CSS */
 .carousel-item {
   background-color: black;
@@ -260,3 +229,35 @@ div.womens-jewellery-text-overlay h2 {
 }
 
 /* END - Jewelry Video Banner Homepage CSS */
+
+
+/* Footer CSS */
+.site-footer {
+  background-color: #000;
+}
+
+.site-footer .card-title {
+  color: #fff;
+}
+
+.site-footer .card-body a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.site-footer .card-body p,
+.phone-number-footer {
+  color: #fff;
+}
+
+.site-footer .fa {
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+/* END Footer CSS */
+
+/* Footer Bottom CSS */
+
+
+/* END Footer Bottom CSS */
