--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ code {
   padding: 0;
   font-family: 'Poppins', sans-serif;
   color: #333;
+  text-decoration: none;
 }
 
 /* global button */
@@ -46,7 +47,7 @@ code {
 
 /* global section */
 section {
-  margin: 5rem 0;
+  margin: 4rem 0;
 }
 
 @media screen and (max-width: 430px) {
