--- a/src/CSS/JewelryVideoBanner.css
+++ b/src/CSS/JewelryVideoBanner.css
@@ -1,4 +1,8 @@
 /* Jewelry Video Banner Homepage CSS */
+section.jewelry-video-banner-homepage {
+    margin: 4rem 0;
+}
+
 .jewelry-video-banner-homepage .container-liquid {
     position: relative;
 }
