--- a/src/CSS/Footer.css
+++ b/src/CSS/Footer.css
@@ -1,4 +1,5 @@
 /* Footer CSS */
+
 .site-footer {
     background-color: #000;
 }
@@ -20,4 +21,10 @@
 .site-footer .fa {
     color: #fff;
     font-size: 1.5rem;
+}
+
+.footer-bottom .copyright-footer span,
+.site-logo-footer-bottom a {
+    color: #fff;
+    text-decoration: none;
 }
