--- a/src/CSS/ElevateFashionImageBanner.css
+++ b/src/CSS/ElevateFashionImageBanner.css
@@ -4,7 +4,7 @@ section.elevate-fashion-image-banner {
 }
 
 .elevate-fashion-image-banner img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .elevate-fashion-image-banner-container {
