--- a/src/CSS/Newsletter.css
+++ b/src/CSS/Newsletter.css
@@ -1,5 +1,5 @@
 section.newsletter {
     background-image: url("/public/images/background-photos/newsletter-background-image.webp");
-    margin: 4rem 0;
+    margin: 4rem 0 1.6rem;
     padding: 4rem 0;
 }
