--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,9 @@ body {
   font-size: 1.5rem;
 }
 
-
+/* global section css on mobile */
 @media screen and (max-width: 430px) {
   section {
-    margin: 3rem 0;
+    margin: 2rem 0 !important;
   }
 }
