--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,12 @@
 .fa.fa-star {
   color: orangered;
 }
+
+/* global CC icons in the product page */
+.fa-cc-visa,
+.fa-cc-mastercard,
+.fa-cc-amex,
+.fa-cc-discover,
+.fa-cc-paypal {
+  font-size: 2rem;
+}
