--- a/src/CSS/FeaturedProductsCarousel.css
+++ b/src/CSS/FeaturedProductsCarousel.css
@@ -32,3 +32,5 @@ section.featured-products-carousel {
     background: #329BD1;
     border-radius: 50%;
 }
+
+/*----------------- MOBILE RESPONSIVENESS ----------------*/
