--- a/src/CSS/ShopByBrands.css
+++ b/src/CSS/ShopByBrands.css
@@ -7,4 +7,4 @@ section.shop-by-brands {
     border: none;
 }
 
-/* END ShopByBrands CSS */
+/*---------------------- MOBILE RESONSIVENESS ----------------------*/
