modified announcement banner css to show slides

--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,4 +1,8 @@
 /* AnnouncementBanner CSS */
+.announcement-banner .slide {
+    display: block !important;
+}
+
 .carousel-item {
     background-color: black;
     color: white;
