created cersei page and css

--- a/src/CSS/FeaturedProductsCarousel.css
+++ b/src/CSS/FeaturedProductsCarousel.css
@@ -34,3 +34,11 @@ section.featured-products-carousel {
 }
 
 /*----------------- MOBILE RESPONSIVENESS ----------------*/
+
+@media screen and (max-width: 430px) {
+
+    .featured-products-carousel .slick-prev,
+    .featured-products-carousel .slick-next {
+        display: none !important;
+    }
+}
