--- a/src/CSS/Newsletter.css
+++ b/src/CSS/Newsletter.css
@@ -2,11 +2,17 @@ section.newsletter {
     background-image: url("/public/images/background-photos/newsletter-background-image.webp");
     margin: 4rem 0 1.6rem;
     padding: 4rem 0;
+    background-repeat: no-repeat;
+}
+
+.newsletter .container {
+    padding: 0 10px;
 }
 
 /*--------------------------MOBILE RESPONSIVENESS END--------------------------*/
 @media screen and (max-width: 430px) {
     section.newsletter {
         margin: 2rem 0 1.6rem;
+        background-repeat: repeat;
     }
 }
