changed fa-star color to goldenrod

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
 
 /* global fa fa-start */
 .fa.fa-star {
-  color: orangered;
+  color: goldenrod;
 }
 
 /* global CC icons in the product page */
