removed g-4 from all products on line 24

--- a/src/CSS/ProductGallerySlides.css
+++ b/src/CSS/ProductGallerySlides.css
@@ -95,4 +95,10 @@
     .thumbnail img {
         width: 60px;
     }
+
+    /* 
+    .product-gallery .next,
+    .product-gallery .prev {
+        display: none !important;
+    } */
 }
