changed success message from Alert to message

--- a/src/CSS/Newsletter.css
+++ b/src/CSS/Newsletter.css
@@ -9,6 +9,10 @@ section.newsletter {
     padding: 0 10px;
 }
 
+.success-message {
+    color: green;
+}
+
 /*--------------------------MOBILE RESPONSIVENESS END--------------------------*/
 @media screen and (max-width: 430px) {
     section.newsletter {
