--- a/src/CSS/Aeliana.css
+++ b/src/CSS/Aeliana.css
@@ -1,25 +1,12 @@
-div#free-shipping-product-form {
+/* div#free-shipping-product-form {
     width: 350px;
     border-color: #329BD1;
-}
-
-ul.nav.nav-tabs .nav-link {
-    color: black;
-}
-
-ul.nav.nav-tabs .nav-link.active {
-    background-color: #329BD1;
-    color: white;
-}
-
-.nav-tabs {
-    --bs-nav-tabs-border-color: #329BD1;
-}
+}*/
 
 .aeliana-product-page .card {
     border: none;
 }
 
-.aeliana-product-page .g-4 {
+/* .aeliana-product-page .g-4 {
     --bs-gutter-x: 5rem;
-}
+} */
